translation-tool/inputs/source_meta/objects/HughesSvc_ExternalInterfaceSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains settings needed to interact with an external application or system interface via redirect, automated login or API.</description>
    <fields>
        <fullName>Authorization_Header__c</fullName>
        <label>Authorization Header</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Value__c</fullName>
        <label>Authorization Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisableRefresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Tool_Type__c</fullName>
        <description>Field to determine the Type of Tool like NAP Ticketing System, etc</description>
        <label>Tool Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Name__c</fullName>
        <label>Interface Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginId_Parameter__c</fullName>
        <description>The parameter name for the default/provider group username while submitting the form</description>
        <label>LoginId Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginId__c</fullName>
        <label>LoginId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Parameter__c</fullName>
        <description>This field is to store the parameter for default/provider group password while submitting the form</description>
        <label>Password Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_processing_Class__c</fullName>
        <label>Pre-processing Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_template__c</fullName>
        <label>URL template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uses_Provider_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses Provider Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAssetTool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the url is for asset tool</description>
        <label>isAssetTool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCSRTools__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicated if the custom setting is used in the CSR Tools Page</description>
        <label>isCSRTools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGETMethod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This variable defines, whether the form has to be posted using &apos;post&apos; method or &apos;get&apos; method</description>
        <label>isGETMethod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGET__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked if any form parameters needs to be sent in URL</description>
        <label>isGET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPOST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPOST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStaticURL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isStaticURL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>openInAccount360__c</fullName>
        <defaultValue>false</defaultValue>
        <label>openInAccount360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>openInNewWindow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if an URL is to be opened in a new window/tab.</description>
        <label>openInNewWindow</label>
        <type>Checkbox</type>
    </fields>
    <label>HughesSvc_External Interface Setting</label>
</CustomObject>